# copperspice

./: .gitignore  CMakeLists.txt
cmake/modules/: ParseAndAddCatchTests.cmake  ResourceMacros.cmake
src/core/: CMakeLists.txt
src/core/tools/: tools.cmake
src/declarative/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/image/: image.cmake
src/gui/text/: text.cmake
src/opengl/: CMakeLists.txt
src/plugins/multimedia/mediaservices/avfoundation/: avfoundation.cmake
src/plugins/multimedia/mediaservices/directshow/: directshow.cmake
src/plugins/multimedia/mediaservices/gstreamer/: gstreamer.cmake
src/plugins/multimedia/playlistformats/: playlistformats.cmake
src/plugins/printerdrivers/cups/: cupsprinter.cmake
src/plugins/printerdrivers/windows/: windowsprinter.cmake
src/plugins/sqldrivers/db2/: db2.cmake
src/plugins/sqldrivers/ibase/: ibase.cmake
src/plugins/sqldrivers/mysql/: mysql.cmake
src/plugins/sqldrivers/oci/: oci.cmake
src/plugins/sqldrivers/odbc/: odbc.cmake
src/plugins/sqldrivers/psql/: psql.cmake
src/plugins/sqldrivers/sqlite/: sqlite.cmake
src/script/: CMakeLists.txt
src/svg/: CMakeLists.txt
src/tools/lconvert/: CMakeLists.txt
src/tools/lrelease/: CMakeLists.txt
src/tools/lupdate/: CMakeLists.txt
src/tools/shared/: CMakeLists.txt
src/webkit/: CMakeLists.txt
